; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/omapdrm/displays/extr_panel-dsi-cm.c_dsicm_queue_ulps_work.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/omapdrm/displays/extr_panel-dsi-cm.c_dsicm_queue_ulps_work.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.panel_drv_data = type { i64, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.panel_drv_data*)* @dsicm_queue_ulps_work to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dsicm_queue_ulps_work(%struct.panel_drv_data* %0) #0 {
  %2 = alloca %struct.panel_drv_data*, align 8
  store %struct.panel_drv_data* %0, %struct.panel_drv_data** %2, align 8
  %3 = load %struct.panel_drv_data*, %struct.panel_drv_data** %2, align 8
  %4 = getelementptr inbounds %struct.panel_drv_data, %struct.panel_drv_data* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp sgt i64 %5, 0
  br i1 %6, label %7, label %18

7:                                                ; preds = %1
  %8 = load %struct.panel_drv_data*, %struct.panel_drv_data** %2, align 8
  %9 = getelementptr inbounds %struct.panel_drv_data, %struct.panel_drv_data* %8, i32 0, i32 2
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.panel_drv_data*, %struct.panel_drv_data** %2, align 8
  %12 = getelementptr inbounds %struct.panel_drv_data, %struct.panel_drv_data* %11, i32 0, i32 1
  %13 = load %struct.panel_drv_data*, %struct.panel_drv_data** %2, align 8
  %14 = getelementptr inbounds %struct.panel_drv_data, %struct.panel_drv_data* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = call i32 @msecs_to_jiffies(i64 %15)
  %17 = call i32 @queue_delayed_work(i32 %10, i32* %12, i32 %16)
  br label %18

18:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @queue_delayed_work(i32, i32*, i32) #1

declare dso_local i32 @msecs_to_jiffies(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
